syntax = "proto3";

// protoc --go_out=. *.proto

package proto;
option go_package = ".;proto";

import "google/protobuf/timestamp.proto";


message User {
  uint64  ID        = 1;
  string  Name      = 2;
  google.protobuf.Timestamp CreatedAt  = 3;
  google.protobuf.Timestamp UpdatedAt  = 4;
  google.protobuf.Timestamp DeletedAt  = 5;
}


